<resources>
    <string name="app_name">Super Cool Weather App</string>
    <string name="input_menu">Input</string>
    <string name="show_menu">Show</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="oib">OIB</string>
    <string name="age">Age</string>
    <string name="workplace">WORKPLACE</string>
    <string name="btn_save">SAVE</string>
    <string name="text_view_welcome">Hello Teta iz menze, please enter your information!</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="gender">GENDER</string>
    <string name="job_shift">JOB SHIFT</string>
    <string name="job_position">JOB POSITION</string>
    <string name="teta_menza_bundle">TETA MENZA BUNDLE</string>
    <string name="profile_img">PROFILE IMAGE</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="settings_menu">Settings</string>
    <string name="snackbar_bundle">SNACKBAR BUNDLE</string>
    <string name="language_changed">Language changed</string>
    <string name="min_max_temp">MIN / MAX</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="pressure">PRESSURE</string>
    <string name="visibilty">VISIBILITY</string>
    <string name="accuracy">ACCURACY</string>
    <string name="undo">UNDO</string>
    <string name="today">Today</string>
    <string name="next_days">Next 5 days</string>
    <string name="search">Search</string>
    <string name="my_cities">My Cities</string>
    <string name="recent">Recent</string>
    <string name="language_en">English</string>
    <string name="language_hr">Croatian</string>
    <string name="clear_fav_cities">CLEAR MY CITIES LIST</string>
    <string name="clear_recent_cities">CLEAR RECENT SEARCH LIST</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="unit_type">Choose your type of unit</string>
    <string name="about_me">About me</string>
    <string name="about_contex">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more">MORE INFO</string>
    <string name="lang">Language</string>
    <string name="about">About</string>
    <string name="sofa">SofaScore Android Academy</string>
    <string name="sofa_class">Class 2021</string>
    <string name="sofa_score">SofaScore</string>
    <string name="about_name">App Name</string>
    <string name="abour_api">API Credit</string>
    <string name="api_credit">metaweather</string>
    <string name="developer">Developer</string>
    <string name="dev_name">Danijel Popović</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>