<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.first_fragment.InputFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >




        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hello_text" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/last_name" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/OIB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/OIB" />

        <include layout="@layout/reusable_layout"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/workplace_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workplace"
            app:layout_constraintTop_toBottomOf="@id/address"/>

        <Spinner
            android:id="@+id/spinner_workplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/workplace_text"
            />

        <TextView
            android:id="@+id/job_position_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_position"
            app:layout_constraintTop_toBottomOf="@id/spinner_workplace"/>

        <Spinner
            android:id="@+id/spinner_job_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/job_position_text"
            />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@id/spinner_job_position"/>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/gender_text"

            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/radio_btn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:checked="true"/>

        </RadioGroup>


        <TextView
            android:id="@+id/job_shift_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_shift"
            app:layout_constraintTop_toBottomOf="@id/gender"/>

        <RadioGroup
            android:id="@+id/job_shift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/job_shift_text"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"/>
            <RadioButton
                android:id="@+id/radio_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:checked="true"/>

        </RadioGroup>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_shift"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>